--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@types/qrcode-terminal": "^0.12.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -12,7 +13,9 @@
     "mongodb": "^5.5.0",
     "morgan": "^1.10.0",
     "processenv": "^3.0.9",
+    "qrcode-terminal": "^0.12.0",
     "typeorm": "^0.3.16",
+    "whatsapp-web.js": "^1.23.0",
     "winston": "^3.9.0"
   },
   "name": "basic-crud-express-mongo",
